--- a/service/pom.xml
+++ b/service/pom.xml
@@ -8,6 +8,6 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>db</artifactId>
+    <artifactId>service</artifactId>
     <packaging>jar</packaging>
 </project>
