--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,11 @@
   <packaging>pom</packaging>
 
   <name>App</name>
-
+  <modules>
+    <module>db</module>
+    <module>api</module>
+    <module>service</module>
+  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
